--- a/FluentFtpDemo.Lib/FluentFtpDemo.Lib.csproj
+++ b/FluentFtpDemo.Lib/FluentFtpDemo.Lib.csproj
@@ -60,7 +60,7 @@
     <Compile Include="IFtpService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Constants\FtpConstants.cs" />
-    <Compile Include="Enumerations\FtpStrategies.cs" />
+    <Compile Include="Enumerations\FtpPolicies.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
